--- a/pages/paginaInicial/index.css
+++ b/pages/paginaInicial/index.css
@@ -11,6 +11,8 @@ body {
     width: 100%;
 }
 
+/* Header */
+
 header {
     width: 100%;
     display: flex;
@@ -23,5 +25,30 @@ header {
 
 #logo {
     font-size: 56px;
+    line-height: 61px;
+    font-weight: 400;
 }
 
+/* Main */
+
+main {
+    width: 100%;
+}
+
+#game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    margin-top: 40px;
+}
+
+#title {
+    font-size: 40px;
+    line-height: 44px;
+    font-weight: 400;
+}
+
+#flag, #inputGuess {
+    width: 256px;
+}
